[package]
name = "home-intercom-esp8266-broker"
version = "0.1.0"
authors = ["Kory <korygm33@gmail.com>"]
edition = "2018"

required-features = ["xtensa-lx-rt/lx106", "xtensa-lx/lx106", "esp8266-hal"]

[dependencies]

panic-halt = "0.2.0"
nb = "0.1.3"
void = { version = "1.0.2", default-features = false }
paste = { version = "1.0", optional = true }

esp8266-hal= { version = "0.4.0", optional = true }
xtensa-lx-rt = { version = "0.5.0", optional = true, features = ["lx106"] }
xtensa-lx = "0.3.0"

[features]
default = ["rt", "interrupt"]
rt = ["xtensa-lx-rt"]
# Place program completely in RAM (needed when e.g. using only ROM bootloader, or for debugging).
all_in_ram = []
interrupt = ["paste"]
